WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284238
[WebGPU] WebGPU Metaballs sample is missing the stone ring
https://bugs.webkit.org/show_bug.cgi?id=284238
Summary
[WebGPU] WebGPU Metaballs sample is missing the stone ring
Mike Wyrzykowski
Reported
2024-12-07 19:04:12 PST
[WebGPU] WebGPU Metaballs sample is missing the stone ring Commenting out lines 955..960 resolves the issue and no out of bounds reads are detected, which means the index clamping for ICBs logic is incorrect.
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-12-07 19:04:31 PST
this site:
https://webgpu.github.io/webgpu-samples/?sample=metaballs
Radar WebKit Bug Importer
Comment 2
2024-12-07 19:04:40 PST
<
rdar://problem/141108427
>
Mike Wyrzykowski
Comment 3
2024-12-07 20:53:57 PST
The sample is using shorts for indices, so need to comment out 974..979 to see it work. Need to figure out where the logic is breaking down.
Mike Wyrzykowski
Comment 4
2024-12-08 10:20:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37604
EWS
Comment 5
2024-12-08 20:40:21 PST
Committed
287535@main
(79138082ae06): <
https://commits.webkit.org/287535@main
> Reviewed commits have been landed. Closing PR #37604 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug