[WebGPU] WebGPU Metaballs sample is missing the stone ring https://bugs.webkit.org/show_bug.cgi?id=284238 rdar://141108427

Reviewed by Tadeu Zagallo.

We were not accounting for firstIndex or indexBufferOffset when performing
ICB index validation, leading to incorrect bounds checking.

* LayoutTests/fast/webgpu/regression/repro_284238-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_284238.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/Device.mm:
Need to account for the first index.

Canonical link: https://commits.webkit.org/287535@main